<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/shared_perfernce"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="1dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingEnd="52dp"
            android:paddingStart="52dp"
            android:src="@drawable/img_tutorial"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/name_Fullname"
            app:startIconDrawable="@drawable/ic_user_24dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_main_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/email_address"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/ic_mail">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_main_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"

            android:text="@string/gender"/>
        <RadioGroup
            android:id="@+id/radioGroup_main_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioBTN_main_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/radioBTN_main_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/female"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_main_save"
            android:layout_width="wrap_content"
            android:text="@string/save_informations"
            app:icon="@drawable/ic_save_24dp"
            app:iconTint="@color/white"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_height="65dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>